Add services to travel

--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -65,6 +65,15 @@
   "cc.Translations.legal.text": "Quando un documento legale deve essere tradotto per essere presentato presso un ente o un’istituzione deve mantenere il proprio valore legale: in questo caso è necessaria la traduzione asseverata (o traduzione giurata) in tribunale. La nostra agenzia, garantisce un servizio professionale e competente di traduzioni giurate. Qualora necessitaste di traduzioni con valore legale di documenti quali diplomi, certificati e altri documenti ufficiali, rivolgervi a noi vi farà risparmiare tempo e denaro.Vi consegneremo traduzioni asseverate complete pronte per essere utilizzate in ambito ufficiale. Le traduzioni giurate di ogni tipo e per ogni esigenza. Tra i servizi di ambito legale la richiesta di traduzioni asseverate diventa ogni giorno più frequente. I confini di frontiera vengono abbattuti e la realtà odierna è sempre più multietnica, pertanto sempre più spesso è necessario tradurre documenti legali perché possano essere presentati per questioni ufficiali. Perciò la traduzione validata in tribunale assume maggiore importanza. Il servizio di asseverazione di traduzioni della nostra agenzia è garantita da un traduttore giurato con più di 25 anni di esperienza.",
 
   "cc.Travel.header": "Viaggi",
+  "cc.Travel.services.header": "Servizi Turistici",
+  "cc.Travel.services.list.ticket": "Biglietti aerei",
+  "cc.Travel.services.list.package": "Pacchetti viaggio",
+  "cc.Travel.services.list.rentalCar": "Auto nolegio",
+  "cc.Travel.services.list.tour": "Tour personalizzati",
+  "cc.Travel.services.list.assistance": "Assistenza turistica",
+  "cc.Travel.services.list.healthEnsurance": "Polizze sanitarie",
+  "cc.Travel.services.list.lodging": "Alberghi e case",
+  "cc.Travel.services.list.view": "Rilascio visti turistici",
   "cc.Travel.info": "La nostra esperienza nel settore come agenzia turistica, ci permette di suggerire le migliore soluzioni alle richieste della nostra clientela, organizzando viaggi personalizzati a Cuba usufruendo in loco di collaborazioni di operatori referenziati ed infrastrutture specializzate nei diversi servizi.",
   "cc.Travel.cuba.header": "Destinazione Cuba.",
   "cc.Travel.cuba.text": "Cuba è l'isola più insolita e affascinante del mar dei Caraibi, una destinazione autentica, accogliente, e dal ritmo irresistibile; che unisce elementi molto diversi tra loro, un capolavoro di natura incontaminata in un clima caldo quasi tutto l'anno. Tante sono le attrattive di interesse, perché Cuba non è solo mare e sole, Cuba è musica, storia, natura, arte, folklore, un popolo allegro e cordiale, che sono il risultato di un passato importante.",
