Añadir información sobre documentación legal.

--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -80,7 +80,7 @@
   "cc.Travel.tourism.header": "Il turismo individuale.",
   "cc.Travel.tourism.text": "Un viaggio personalizzato è il modo migliore per conoscere ed apprezzare un paese ed i propri costumi. Presso i nostri uffici è presente personale specializzato nell'organizzazione del viaggio che più si addice alle tue esigenze, al fine di aiutarti a scoprire gli angoli più belli e lussureggianti della natura tropicale dell’isola, il fascino delle città coloniali, il proprio antico fascino, e non ultimo la ricchezza di spirito e l’allegria dei cubani.",
 
-  "cc.Legal.header": "Documenti",
+  "cc.Legal.header": "Servizi & gestione documenti",
 
   "cc.Contact.header": "Dove siamo & Contatti",
   "cc.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
