--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -9,7 +9,7 @@
   "cc.Header.contact": "Contatti",
 
   "cc.Footer.about.header": "Su di noi",
-  "cc.Footer.about.body": "Perché non solo è importante fare quello che si ama, ma è pure importante amare quello che si fà! Questo concetto è palpabile conoscendo Maria Luisa negli uffici di Piazza Sante Bargellini N°3, puoi apprezzarne il rispetto che porta al proprio lavoro ed alle persone che interagiscono con lei. Cuba Conmigo offre consulenze sempre in forma gratuita anche su situazioni di particolare complessità, suggerendo sempre soluzioni ottimali alle esigenze della propria clientela.",
+  "cc.Footer.about.body": "La nostra è una associazione specializzata essenzialmente in servizi da e per Cuba. A titolo esemplificativo elenchiamo quelli maggiormente forniti: inviti in Italia, visti familiari, rinnovo passaporti, matrimoni, divorzi, richieste certificati a Cuba, richieste documenti per studio, richiesta on line della cittadinanza italiana, trascrizioni di atti di nascita e di matrimoni, richiesta certificati per la residenza a Cuba di stranieri e fidejussioni.",
   "cc.Footer.copyright": "© 2017 Associazione Cuba Conmigo. ",
   "cc.Footer.designer": "Disegnato con {love} da {link}.",
 
