Internacionalizar título del slider

--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -35,6 +35,7 @@
   "cc.HomePage.call.subtitle": "Il difficile diventa facile quando pensiamo che facile sia!",
   "cc.HomePage.call.button.services": "Apprendere più",
   "cc.HomePage.call.button.contact": "Contattaci",
+  "cc.HomePage.slider.title": "Vieni a trovarci",
 
   "cc.About.header": "Ciò che possiamo fare per te!",
   "cc.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
